--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>2.4.5</version>
+    </dependency>
   </dependencies>
 
   <build>
